# ClosedEyesDetection

./: README.md  main.py  pyproject.toml
